# knowledge-kb

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  RECAP.md  docker-compose.embedding-cpu.yml  docker-compose.embedding-gpu.yml  docker-compose.local.yml  docker-compose.yml  答疑中台知识库演示版.html
prototypes/answer-hub/: .dockerignore  .env.example  .gitignore  ACCEPTANCE_CHECKLIST.md  AGENTS.md  AI_HANDOFF_LATEST.md  CHANGE_SUMMARY.md  CZ_INTEGRATION_RUNBOOK.md  DELIVERY_GUIDE.md  DIFY_SETUP.md  OPERATIONS_RUNBOOK.md  PACKAGE_CONTENTS.md  PROJECT_HANDOFF.md  README.md  START_HERE.md  TRANSFER_ANALYSIS.md  USER_OPERATIONS_GUIDE.md  automation-api-reference.md  pyproject.toml  start_streamlit.ps1  streamlit_app.py  上传负责部分到GitHub.cmd  修复黑窗闪烁.cmd  发布前验收并打包.cmd  启动Dify平台.cmd  启动本地CZ.cmd  启动自动化看板.cmd  给CZ对接_第三部分知识转写说明.md
prototypes/answer-hub/config/: dify-answer-hub-openapi.json  dify-answer-hub-openapi.yaml  standard_sources.example.json
prototypes/answer-hub/examples/: baixiaosheng_endpoint_profile.example.json  manhattan_endpoint_profile.example.json  second_part_batch.example.json  semantic_clustering_demo.xlsx  semantic_clustering_standards.json  standard_catalog.example.json
prototypes/answer-hub/handoff/: START_HERE.md  docker-compose.embedding-cpu.yml  docker-compose.embedding-gpu.yml  generate_demo_workbook.py  setup_home.ps1  start_streamlit.ps1
prototypes/answer-hub/scripts/: backup_cz.ps1  build_cluster_annotation_home_package.py  build_cluster_sample.py  build_delivery_package.ps1  build_full_cluster_units.py  build_full_cluster_validation_workbook.mjs  compile_standards.py  diagnose_dify.ps1  e2e_acceptance.ps1  (+26 more)
(+136 files in other folders)
