[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "answer-hub"
version = "0.2.0"
description = "Answer hub workflow skeleton for model labeling, human review, and feedback loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=2.2",
  "numpy>=1.26",
  "openpyxl>=3.0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
ui = [
  "streamlit",
]
collector = [
  "playwright",
]

[project.scripts]
answer-hub = "answer_hub.cli:main"
answer-hub-web = "answer_hub.web:main"
answer-hub-api = "answer_hub.automation_api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
answer_hub = ["product_categories.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
